# rsi-agent-platform

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.db-read-lambda  Makefile  README.md  go.mod  go.sum  sqlc.yaml
.github/workflows/: auto-merge-hermes-skill-exports.yml  cd.yml  ci.yml
cmd/control-plane/: main.go
cmd/db-read-lambda/: main.go
cmd/improvement-plane/: main.go
cmd/tool-gateway/: main.go
cmd/workflow-api/: main.go
docs/: company-knowledge-system.md  db-read-gateway-architecture.md  firecrawl-web-search-architecture.md  honcho-stage-rollout.md  notion-mcp.md  persistence-hardening-stage-acceptance.md
hermes/: assets.go
hermes/capabilities/: story-company.json
hermes/learner/: manifest.yaml
honcho/: Dockerfile  README.md  apply_rsi_overlay.py  rsi-entrypoint.sh
internal/action/: types.go
internal/app/: commands.go  drain.go  http.go  http_test.go
internal/clients/: clients_test.go  honcho.go  httpjson.go  notion.go  notion_test.go  runner.go  toolgateway.go
internal/cluster/: client.go
runner/: Dockerfile  Dockerfile.hermes-executor  Dockerfile.hermes-learner  Dockerfile.hermes-skill-exporter  Dockerfile.hermes-skill-installer  README.md  pyproject.toml
runner/rsi_runner/: __init__.py  config.py  db_read_cli.py  db_utils.py  execution_contract.py  file_utils.py  grafana_observability.py  hermes_adapter.py  hermes_agent_adapter.py  hermes_executor_worker.py  hermes_learner.py  hermes_mcp_adapter.py  hermes_runtime.py  hermes_self_review_candidate_writer.py  hermes_self_review_worker.py  hermes_skill_exporter.py  hermes_skill_installer.py  json_types.py  main.py  observability.py  pr_review_gate.py  rsi_tools.py  session_manager.py  slack_mcp_server.py  slack_uploads.py
runner/tests/: test_db_read_cli.py  test_extract_hermes_pin.py  test_grafana_observability.py  test_hermes_learner.py  test_hermes_mcp_adapter.py  test_hermes_runtime.py  test_hermes_skill_exporter.py  test_hermes_skill_installer.py  test_rsi_kanban_tools.py  test_runner_main.py  test_slack_mcp_server.py  test_update_story_deployments_tags.py
sandbox/: Dockerfile
scripts/: check_story_company_skill_seed_changes.sh  extract_hermes_pin.py  refresh_schema_snapshot.sh  update_story_deployments_tags.py  validate_hermes_assets.py
(+2380 files in other folders)
