[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rsi-agent-platform-runner"
version = "0.1.0"
description = "Hermes-backed runner wrapper for RSI Agent Platform"
requires-python = ">=3.11"
dependencies = [
    "hermes-agent[honcho,mcp,messaging] @ git+https://github.com/blakehuynh39/hermes-agent.git@c274779b29267d8e5c0c24392d991170facf0f43",
    "matplotlib>=3.9,<4",
    "PyJWT[crypto]>=2.8,<3",
]

[project.scripts]
rsi-runner = "rsi_runner.main:main"
hermes-skill-exporter = "rsi_runner.hermes_skill_exporter:main"
hermes-skill-installer = "rsi_runner.hermes_skill_installer:main"

[tool.setuptools.packages.find]
include = ["rsi_runner"]
